--- a/css/hw1.css
+++ b/css/hw1.css
@@ -1,5 +1,14 @@
+body {
+  margin: 10px;
+  padding: 10px;
+}
+
 header {
   background-color: #179b17;
+  color: inherit;
+  background-image: url("../images/flywheel.jpg");
+  background-size: 100%;
+  padding: 40px 30px;
 }
 
 h1 {
@@ -9,22 +18,56 @@ h1 {
 
 h2 {
   color: #007500;
+  background-color: inherit;
 }
 
 section {
-  background-color: #d2f8d2;
+  padding: 10px;
+  margin: 0 50px;
 }
 
-a {
-  background-color: #fff;
-  color: #007500;
+section .right {
+  float: right;
 }
 
-a:visited {
+aside {
+  width: 20%;
+  min-height: 71.5vh;
+  padding: 15px 0;
+  margin: 0 20px 0 0;
+  float: left;
+  background-color: #e0e0e0;
+}
+
+aside a {
   background-color: inherit;
-  color: #ad3700;
 }
 
 img {
-  display: none;
+  width: 200px;
+  height: 120px;
+  border: 5px solid #007500;
+  border-radius: 10px;
+  display: block;
+  margin: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a {
+  background-color: #ffffff55;
+  color: #007500;
+}
+
+nav a {
+  display: inline;
+  margin: 10px;
+  padding: 11px 20px;
+  border-radius: 30px;
+  text-decoration: none;
+}
+
+.active {
+  color: #fff;
+  background-color: #007500;
 }
