--- a/css/hw1.css
+++ b/css/hw1.css
@@ -7,6 +7,7 @@ header {
   background-color: #179b17;
   color: inherit;
   background-image: url("../images/flywheel.jpg");
+  background-repeat: no-repeat;
   background-size: 100%;
   padding: 40px 30px;
 }
