Update styling for data when hovered

--- a/css/hw1.css
+++ b/css/hw1.css
@@ -132,10 +132,19 @@ table tr:nth-child(even) {
 }
 
 /* Row changes color when hovered */
-table tr:hover {
+tr td{
+  text-align: center;
+  border-radius: 2px;
+  padding: 1%;
+  transition: 1s;
+}
+
+tr td:hover{
   background-color: #bcf5bc;
   color: inherit;
-  opacity: 0.9;
+  opacity: 0.95;
+  transform: scaleX(0.99);
+  border-color: #bbb;
 }
 
 /* Align left for the first column */
